--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@cartesi/util",
-  "version": "0.1.0-alpha.6",
+  "version": "0.1.0",
   "description": "Solidity Util Contracts",
   "scripts": {
     "prepare": "truffle compile",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@truffle/hdwallet-provider": "^1.0.26"
+  },
   "devDependencies": {
-    "truffle": "^5.0.44"
+    "truffle": "^5.1.3"
   },
   "repository": {
     "type": "git",
