--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cartesi/util",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Solidity Util Contracts",
   "scripts": {
     "prepare": "truffle compile",
@@ -8,8 +8,11 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@truffle/hdwallet-provider": "^1.0.26",
-    "truffle": "^5.1.3"
+    "@truffle/hdwallet-provider": "^1.0.33",
+    "truffle": "^5.1.17"
+  },
+  "resolutions": {
+    "ethereumjs-util": "6.2.0"
   },
   "repository": {
     "type": "git",
