--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^2.5.0"
+    "@openzeppelin/contracts": "^2.5.0",
+    "bignumber.js": "^9.0.0"
   },
   "devDependencies": {
     "@truffle/hdwallet-provider": "^1.0.33",
