--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "name": "@cartesi/util",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Solidity Util Contracts",
   "scripts": {
     "prepare": "truffle compile",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "truffle test"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^2.5.0",
     "bignumber.js": "^9.0.0"
   },
   "devDependencies": {
-    "@truffle/hdwallet-provider": "^1.0.33",
-    "truffle": "^5.1.19"
-  },
-  "resolutions": {
-    "ethereumjs-util": "6.2.0"
+    "@truffle/hdwallet-provider": "^1.0.35",
+    "truffle": "^5.1.28"
   },
   "repository": {
     "type": "git",
