--- a/package.json
+++ b/package.json
@@ -3,15 +3,37 @@
   "version": "0.3.0",
   "description": "Solidity Util Contracts",
   "scripts": {
+    "info": "npm-scripts-info",
     "prepare": "truffle compile",
-    "test": "truffle test"
+    "test": "truffle test",
+    "deploy": "run-s deploy:development",
+    "deploy:testnet": "run-s deploy:ropsten deploy:kovan deploy:rinkeby deploy:matic_testnet",
+    "deploy:development": "truffle migrate --network development",
+    "deploy:ropsten": "truffle migrate --network ropsten",
+    "deploy:kovan": "truffle migrate --network kovan",
+    "deploy:rinkeby": "truffle migrate --network rinkeby",
+    "deploy:matic_testnet": "truffle migrate --network matic_testnet",
+    "prepack": "npm run deploy:testnet"
+  },
+  "scripts-info": {
+    "info": "Displays information about the scripts.",
+    "test": "Run unit tests",
+    "deploy": "Deploy contracts to local ganache. Requires ganache running on localhost:8545",
+    "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+    "deploy:development": "Deploy contracts to local ganache. Requires ganache running on localhost:8545",
+    "deploy:ropsten": "Deploy contracts to ropsten. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+    "deploy:kovan": "Deploy contracts to kovan. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+    "deploy:rinkeby": "Deploy contracts to rinkeby. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+    "deploy:matic_testnet": "Deploy contracts to matic_testnet."
   },
   "dependencies": {
     "@openzeppelin/contracts": "^2.5.0",
-    "bignumber.js": "^9.0.0"
+    "bignumber.js": "^9.0.0",
+    "npm-scripts-info": "^0.3.9"
   },
   "devDependencies": {
     "@truffle/hdwallet-provider": "^1.0.35",
+    "npm-run-all": "^4.1.5",
     "truffle": "^5.1.28"
   },
   "repository": {
