--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "info": "npm-scripts-info",
     "prepare": "truffle compile",
     "test": "truffle test",
+    "clean": "rimraf build",
     "deploy": "run-s deploy:development",
     "deploy:testnet": "run-s deploy:ropsten deploy:kovan deploy:rinkeby deploy:matic_testnet",
     "deploy:development": "truffle migrate --network development",
@@ -13,11 +14,12 @@
     "deploy:kovan": "truffle migrate --network kovan",
     "deploy:rinkeby": "truffle migrate --network rinkeby",
     "deploy:matic_testnet": "truffle migrate --network matic_testnet",
-    "prepack": "npm run deploy:testnet"
+    "prepack": "run-s clean deploy:testnet"
   },
   "scripts-info": {
     "info": "Displays information about the scripts.",
     "test": "Run unit tests",
+    "clean": "Clean build artifacts, including contracts deployment information",
     "deploy": "Deploy contracts to local ganache. Requires ganache running on localhost:8545",
     "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "deploy:development": "Deploy contracts to local ganache. Requires ganache running on localhost:8545",
@@ -34,6 +36,7 @@
   "devDependencies": {
     "@truffle/hdwallet-provider": "^1.0.35",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "truffle": "^5.1.28"
   },
   "repository": {
