--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,5 +13,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14'
-      - run: npm install
-      - run: npm test
+      - run: yarn install
+      - run: npx buidler typechain
+      - run: yarn test
