--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "Solidity Util Contracts",
   "scripts": {
     "info": "npm-scripts-info",
-    "prepare": "truffle compile",
-    "test": "truffle test",
-    "clean": "rimraf build",
+    "prepare": "buidler compile",
+    "test": "buidler test",
+    "clean": "rimraf artifacts && rimraf cache && rimraf deployments && rimraf src/types/*",
     "deploy": "run-s deploy:development",
     "deploy:testnet": "run-s deploy:ropsten deploy:rinkeby deploy:matic_testnet",
-    "deploy:development": "truffle migrate --network development",
-    "deploy:ropsten": "truffle migrate --network ropsten",
-    "deploy:kovan": "truffle migrate --network kovan",
-    "deploy:rinkeby": "truffle migrate --network rinkeby",
-    "deploy:matic_testnet": "truffle migrate --network matic_testnet",
-    "prepack": "run-s clean deploy:testnet"
+    "deploy:development": "buidler deploy --network localhost",
+    "deploy:ropsten": "buidler deploy --network ropsten",
+    "deploy:kovan": "buidler deploy --network kovan",
+    "deploy:rinkeby": "buidler deploy --network rinkeby",
+    "deploy:matic_testnet": "buidler deploy --network matic_testnet",
+    "prepack": "run-s clean deploy:testnet",
+    "start": "buidler node"
   },
   "scripts-info": {
     "info": "Displays information about the scripts.",
@@ -29,15 +30,32 @@
     "deploy:matic_testnet": "Deploy contracts to matic_testnet."
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^3.0.1",
-    "bignumber.js": "^9.0.0",
-    "npm-scripts-info": "^0.3.9"
+    "@openzeppelin/contracts": "^3.1.0",
+    "ethers": "^5.0.8"
   },
   "devDependencies": {
-    "@truffle/hdwallet-provider": "^1.0.35",
+    "@nodefactory/buidler-typechain": "^0.2.0",
+    "@nomiclabs/buidler": "^1.4.3",
+    "@nomiclabs/buidler-ethers": "^2.0.0",
+    "@nomiclabs/buidler-waffle": "^2.0.0",
+    "@typechain/ethers-v4": "^1.0.0",
+    "@typechain/ethers-v5": "^1.0.0",
+    "@typechain/truffle-v4": "^2.0.3",
+    "@typechain/truffle-v5": "^2.0.2",
+    "@typechain/web3-v1": "^1.0.0",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^8.0.0",
+    "@types/node": "^14.0.23",
+    "buidler-deploy": "^0.5.11",
+    "chai": "^4.2.0",
+    "ethereum-waffle": "^3.0.2",
     "npm-run-all": "^4.1.5",
+    "npm-scripts-info": "^0.3.9",
     "rimraf": "^3.0.2",
-    "truffle": "^5.1.28"
+    "ts-generator": "^0.0.8",
+    "ts-node": "^8.10.2",
+    "typechain": "^2.0.0",
+    "typescript": "^3.9.7"
   },
   "repository": {
     "type": "git",
@@ -48,9 +66,7 @@
   ],
   "files": [
     "contracts",
-    "migrations",
-    "build",
-    "truffle-config.js"
+    "deployments"
   ],
   "author": "Danilo Tuler <danilo@cartesi.io>",
   "license": "Apache-2.0"
