--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cartesi/util",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Solidity Util Contracts",
   "scripts": {
     "info": "npm-scripts-info",
@@ -33,31 +33,27 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.1.0",
-    "ethers": "^5.0.8"
+    "ethers": "5.0.8"
   },
   "devDependencies": {
     "@nodefactory/buidler-typechain": "^0.2.0",
-    "@nomiclabs/buidler": "^1.4.3",
+    "@nomiclabs/buidler": "^1.4.5",
     "@nomiclabs/buidler-ethers": "^2.0.0",
-    "@nomiclabs/buidler-waffle": "^2.0.0",
-    "@typechain/ethers-v4": "^1.0.0",
+    "@nomiclabs/buidler-waffle": "^2.1.0",
     "@typechain/ethers-v5": "^1.0.0",
-    "@typechain/truffle-v4": "^2.0.3",
-    "@typechain/truffle-v5": "^2.0.2",
-    "@typechain/web3-v1": "^1.0.0",
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "^8.0.0",
-    "@types/node": "^14.0.23",
-    "buidler-deploy": "^0.5.11",
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.6.4",
+    "buidler-deploy": "0.6.0-beta.16",
     "chai": "^4.2.0",
-    "ethereum-waffle": "^3.0.2",
+    "ethereum-waffle": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "npm-scripts-info": "^0.3.9",
     "rimraf": "^3.0.2",
     "ts-generator": "^0.0.8",
-    "ts-node": "^8.10.2",
+    "ts-node": "^9.0.0",
     "typechain": "^2.0.0",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.2"
   },
   "repository": {
     "type": "git",
@@ -67,6 +63,7 @@
     "cartesi"
   ],
   "files": [
+    "artifacts",
     "contracts",
     "deployments"
   ],
