--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "deploy:bsc_testnet": "Deploy contracts to bsc_testnet."
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^3.1.0",
+    "@openzeppelin/contracts": "3.1.0-solc-0.7",
     "ethers": "5.0.8"
   },
   "devDependencies": {
