--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "3.1.0-solc-0.7",
-    "ethers": "5.0.8"
+    "ethers": "5.0.8",
+    "solc": "0.7.1"
   },
   "devDependencies": {
     "@nodefactory/buidler-typechain": "^0.2.0",
