--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "test": "buidler test",
     "clean": "rimraf artifacts && rimraf cache && rimraf deployments && rimraf src/types/*",
     "deploy": "run-s deploy:development",
-    "deploy:testnet": "run-s deploy:ropsten deploy:rinkeby deploy:matic_testnet deploy:bsc_testnet",
+    "deploy:testnet": "run-s deploy:ropsten deploy:rinkeby deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet",
     "deploy:development": "buidler deploy --network localhost",
     "deploy:ropsten": "buidler deploy --network ropsten",
-    "deploy:kovan": "buidler deploy --network kovan",
     "deploy:rinkeby": "buidler deploy --network rinkeby",
+    "deploy:kovan": "buidler deploy --network kovan",
+    "deploy:goerli": "buidler deploy --network goerli",
     "deploy:matic_testnet": "buidler deploy --network matic_testnet",
     "deploy:bsc_testnet": "buidler deploy --network bsc_testnet",
     "prepack": "run-s clean deploy:testnet",
@@ -26,8 +27,9 @@
     "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "deploy:development": "Deploy contracts to local ganache. Requires ganache running on localhost:8545",
     "deploy:ropsten": "Deploy contracts to ropsten. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-    "deploy:kovan": "Deploy contracts to kovan. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "deploy:rinkeby": "Deploy contracts to rinkeby. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+    "deploy:kovan": "Deploy contracts to kovan. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+    "deploy:goerli": "Deploy contracts to goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "deploy:matic_testnet": "Deploy contracts to matic_testnet.",
     "deploy:bsc_testnet": "Deploy contracts to bsc_testnet."
   },
