--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "deploy:bsc_testnet": "Deploy contracts to bsc_testnet."
   },
   "dependencies": {
-    "@openzeppelin/contracts": "3.2.0-solc-0.7",
-    "ethers": "5.0.8",
-    "solc": "0.7.1"
+    "@openzeppelin/contracts": "3.2.1-solc-0.7"
   },
   "devDependencies": {
     "@nodefactory/buidler-typechain": "^0.2.0",
@@ -50,9 +48,11 @@
     "buidler-deploy": "0.6.0-beta.21",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.1.0",
+    "ethers": "5.0.14",
     "npm-run-all": "^4.1.5",
     "npm-scripts-info": "^0.3.9",
     "rimraf": "^3.0.2",
+    "solc": "0.7.1",
     "ts-generator": "^0.0.8",
     "ts-node": "^9.0.0",
     "typechain": "^2.0.0",
