--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "description": "Solidity Util Contracts",
   "scripts": {
     "info": "npm-scripts-info",
-    "prepare": "buidler compile && buidler typechain",
-    "test": "buidler test",
+    "prepare": "hardhat compile && hardhat typechain",
+    "test": "hardhat test",
     "clean": "rimraf artifacts && rimraf cache && rimraf deployments/localhost && rimraf src/types/*",
     "deploy": "run-s deploy:development",
     "deploy:testnet": "run-s deploy:ropsten deploy:rinkeby deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet",
-    "deploy:development": "buidler deploy --network localhost",
-    "deploy:ropsten": "buidler deploy --network ropsten",
-    "deploy:rinkeby": "buidler deploy --network rinkeby",
-    "deploy:kovan": "buidler deploy --network kovan",
-    "deploy:goerli": "buidler deploy --network goerli",
-    "deploy:matic_testnet": "buidler deploy --network matic_testnet",
-    "deploy:bsc_testnet": "buidler deploy --network bsc_testnet",
+    "deploy:development": "hardhat deploy --network localhost",
+    "deploy:ropsten": "hardhat deploy --network ropsten",
+    "deploy:rinkeby": "hardhat deploy --network rinkeby",
+    "deploy:kovan": "hardhat deploy --network kovan",
+    "deploy:goerli": "hardhat deploy --network goerli",
+    "deploy:matic_testnet": "hardhat deploy --network matic_testnet",
+    "deploy:bsc_testnet": "hardhat deploy --network bsc_testnet",
     "prepack": "run-s clean prepare",
-    "start": "buidler node"
+    "start": "hardhat node"
   },
   "scripts-info": {
     "info": "Displays information about the scripts.",
@@ -37,26 +37,28 @@
     "@openzeppelin/contracts": "3.2.1-solc-0.7"
   },
   "devDependencies": {
-    "@nodefactory/buidler-typechain": "^0.2.0",
-    "@nomiclabs/buidler": "^1.4.5",
-    "@nomiclabs/buidler-ethers": "^2.0.0",
-    "@nomiclabs/buidler-waffle": "^2.1.0",
-    "@typechain/ethers-v5": "^1.0.0",
-    "@types/chai": "^4.2.12",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@typechain/ethers-v5": "^2.0.0",
+    "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
-    "@types/node": "^14.6.4",
-    "buidler-deploy": "0.6.0-beta.21",
+    "@types/node": "^14.14.2",
     "chai": "^4.2.0",
-    "ethereum-waffle": "^3.1.0",
-    "ethers": "5.0.14",
+    "ethereum-waffle": "^3.1.2",
+    "ethers": "^5.0.19",
+    "hardhat": "^2.0.2",
+    "hardhat-deploy": "0.7.0-beta.16",
+    "hardhat-deploy-ethers": "0.3.0-beta.5",
+    "hardhat-typechain": "^0.3.3",
     "npm-run-all": "^4.1.5",
     "npm-scripts-info": "^0.3.9",
     "rimraf": "^3.0.2",
     "solc": "0.7.1",
-    "ts-generator": "^0.0.8",
+    "ts-generator": "^0.1.1",
     "ts-node": "^9.0.0",
-    "typechain": "^2.0.0",
-    "typescript": "^4.0.2"
+    "typechain": "^3.0.0",
+    "typescript": "^4.0.5"
   },
   "repository": {
     "type": "git",
