--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "files": [
     "artifacts",
     "contracts",
+    "deploy",
     "deployments"
   ],
   "author": "Danilo Tuler <danilo@cartesi.io>",
