Add TypeChain typings to npm package content

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@cartesi/util",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Solidity Util Contracts",
   "scripts": {
-    "build": "hardhat compile && hardhat typechain && tsc",
+    "build": "hardhat compile && tsc",
     "clean": "rimraf artifacts && rimraf cache && rimraf deployments/localhost && rimraf src/types/*",
+    "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist/src",
     "deploy": "run-s deploy:development",
     "deploy:testnet": "run-s deploy:ropsten deploy:rinkeby deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet",
     "deploy:development": "hardhat deploy --network localhost",
@@ -17,16 +18,17 @@
     "export": "hardhat export-artifacts export/artifacts",
     "info": "npm-scripts-info",
     "prepack": "run-s clean prepare",
-    "prepare": "run-s build export",
+    "prepare": "run-s build copy-dts export",
     "start": "hardhat node",
     "test": "hardhat test"
   },
   "scripts-info": {
     "build": "Build contracts and typescript code",
-    "clean": "Clean build artifacts, including contracts deployment information",
-    "deploy": "Deploy contracts to local ganache. Requires ganache running on localhost:8545",
+    "copy-dts": "Copy TypeChain type definition files to typescript output dir",
+    "clean": "Clean build artifacts, including contracts local deployment information",
+    "deploy": "Deploy contracts to local node. Requires node running on localhost:8545",
     "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-    "deploy:development": "Deploy contracts to local ganache. Requires ganache running on localhost:8545",
+    "deploy:development": "Deploy contracts to local node. Requires node running on localhost:8545",
     "deploy:ropsten": "Deploy contracts to ropsten. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "deploy:rinkeby": "Deploy contracts to rinkeby. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "deploy:kovan": "Deploy contracts to kovan. Requires two environment variables: PROJECT_ID and MNEMONIC.",
@@ -49,6 +51,7 @@
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.2",
     "chai": "^4.2.0",
+    "copyfiles": "^2.4.0",
     "ethereum-waffle": "^3.1.2",
     "ethers": "^5.0.19",
     "hardhat": "^2.0.2",
