Dropping support for ropsten

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "clean": "rimraf artifacts && rimraf cache && rimraf deployments/localhost && rimraf src/types/*",
     "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist/src",
     "deploy": "run-s deploy:development",
-    "deploy:testnet": "run-s deploy:ropsten deploy:rinkeby deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet",
+    "deploy:testnet": "run-s deploy:rinkeby deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet",
     "deploy:development": "hardhat deploy --network localhost",
-    "deploy:ropsten": "hardhat deploy --network ropsten --export export/abi/ropsten.json",
     "deploy:rinkeby": "hardhat deploy --network rinkeby --export export/abi/rinkeby.json",
     "deploy:kovan": "hardhat deploy --network kovan --export export/abi/kovan.json",
     "deploy:goerli": "hardhat deploy --network goerli --export export/abi/goerli.json",
@@ -29,7 +28,6 @@
     "deploy": "Deploy contracts to local node. Requires node running on localhost:8545",
     "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "deploy:development": "Deploy contracts to local node. Requires node running on localhost:8545",
-    "deploy:ropsten": "Deploy contracts to ropsten. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "deploy:rinkeby": "Deploy contracts to rinkeby. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "deploy:kovan": "Deploy contracts to kovan. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "deploy:goerli": "Deploy contracts to goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
