--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "clean": "rimraf artifacts && rimraf cache && rimraf deployments/localhost && rimraf src/types/*",
     "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist/src",
     "deploy": "run-s deploy:development",
-    "deploy:testnet": "run-s deploy:rinkeby deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet",
-    "deploy:development": "hardhat deploy --network localhost",
-    "deploy:rinkeby": "hardhat deploy --network rinkeby --export export/abi/rinkeby.json",
-    "deploy:kovan": "hardhat deploy --network kovan --export export/abi/kovan.json",
-    "deploy:goerli": "hardhat deploy --network goerli --export export/abi/goerli.json",
-    "deploy:matic_testnet": "hardhat deploy --network matic_testnet --export export/abi/matic_testnet.json",
     "deploy:bsc_testnet": "hardhat deploy --network bsc_testnet --export export/abi/bsc_testnet.json",
+    "deploy:development": "hardhat deploy --network localhost",
+    "deploy:goerli": "hardhat deploy --network goerli --export export/abi/goerli.json",
+    "deploy:kovan": "hardhat deploy --network kovan --export export/abi/kovan.json",
+    "deploy:mainnet": "hardhat deploy --network mainnet --export export/abi/mainnet.json",
+    "deploy:matic_testnet": "hardhat deploy --network matic_testnet --export export/abi/matic_testnet.json",
+    "deploy:rinkeby": "hardhat deploy --network rinkeby --export export/abi/rinkeby.json",
+    "deploy:testnet": "run-s deploy:rinkeby deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet",
     "export": "hardhat export-artifacts export/artifacts",
     "info": "npm-scripts-info",
     "prepack": "run-s clean prepare",
@@ -26,13 +27,14 @@
     "copy-dts": "Copy TypeChain type definition files to typescript output dir",
     "clean": "Clean build artifacts, including contracts local deployment information",
     "deploy": "Deploy contracts to local node. Requires node running on localhost:8545",
-    "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-    "deploy:development": "Deploy contracts to local node. Requires node running on localhost:8545",
-    "deploy:rinkeby": "Deploy contracts to rinkeby. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-    "deploy:kovan": "Deploy contracts to kovan. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-    "deploy:goerli": "Deploy contracts to goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-    "deploy:matic_testnet": "Deploy contracts to matic_testnet.",
     "deploy:bsc_testnet": "Deploy contracts to bsc_testnet.",
+    "deploy:development": "Deploy contracts to local node. Requires node running on localhost:8545",
+    "deploy:goerli": "Deploy contracts to goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+    "deploy:kovan": "Deploy contracts to kovan. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+    "deploy:mainnet": "Deploy contracts to mainnet.",
+    "deploy:matic_testnet": "Deploy contracts to matic_testnet.",
+    "deploy:rinkeby": "Deploy contracts to rinkeby. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+    "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "export": "Export artifacts in a simpler format",
     "info": "Displays information about the scripts.",
     "test": "Run unit tests"
