--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
         "deploy:kovan": "hardhat deploy --network kovan --export export/abi/kovan.json",
         "deploy:mainnet": "hardhat deploy --network mainnet --export export/abi/mainnet.json",
         "deploy:matic_testnet": "hardhat deploy --network matic_testnet --export export/abi/matic_testnet.json",
+        "deploy:avax_testnet": "hardhat deploy --network avax_testnet --export export/abi/avax_testnet.json",
         "deploy:rinkeby": "hardhat deploy --network rinkeby --export export/abi/rinkeby.json",
-        "deploy:testnet": "run-s deploy:rinkeby deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet",
+        "deploy:testnet": "run-s deploy:rinkeby deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet deploy:avax_testnet",
         "export": "hardhat export-artifacts export/artifacts",
         "info": "npm-scripts-info",
         "prepack": "run-s clean prepare",
@@ -33,6 +34,7 @@
         "deploy:kovan": "Deploy contracts to kovan. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:mainnet": "Deploy contracts to mainnet.",
         "deploy:matic_testnet": "Deploy contracts to matic_testnet.",
+        "deploy:avax_testnet": "Deploy contracts to avax_testnet.",
         "deploy:rinkeby": "Deploy contracts to rinkeby. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "export": "Export artifacts in a simpler format",
