--- a/package.json
+++ b/package.json
@@ -45,7 +45,11 @@
         "@openzeppelin/contracts": "3.2.1-solc-0.7"
     },
     "devDependencies": {
-        "@nomiclabs/hardhat-ethers": "^2.0.1",
+        "hardhat": "^2.0.4",
+        "hardhat-deploy": "0.7.0-beta.46",
+        "hardhat-typechain": "^0.3.3",
+        "hardhat-deploy-ethers": "0.3.0-beta.7",
+        "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
         "@nomiclabs/hardhat-etherscan": "^2.0.1",
         "@nomiclabs/hardhat-waffle": "^2.0.1",
         "@typechain/ethers-v5": "^6.0.0",
@@ -56,10 +60,6 @@
         "copyfiles": "^2.4.1",
         "ethereum-waffle": "^3.2.1",
         "ethers": "^5.0.23",
-        "hardhat": "^2.0.4",
-        "hardhat-deploy": "0.7.0-beta.46",
-        "hardhat-deploy-ethers": "0.3.0-beta.7",
-        "hardhat-typechain": "^0.3.3",
         "npm-run-all": "^4.1.5",
         "npm-scripts-info": "^0.3.9",
         "rimraf": "^3.0.2",
