--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "declaration": true,
         "target": "es2018",
         "module": "commonjs",
+        "allowJs": true,
         "strict": true,
         "resolveJsonModule": true,
         "esModuleInterop": true,
