--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "info": "npm-scripts-info",
         "prepack": "run-s clean prepare",
         "prepare": "run-s build copy-dts export",
+        "prettier": "prettier --check src/**/*.ts test/**/*.ts contracts/**/*.sol",
+        "solhint": "solhint contracts/**/*.sol",
         "start": "hardhat node",
         "test": "hardhat test"
     },
@@ -39,33 +41,37 @@
         "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "export": "Export artifacts in a simpler format",
         "info": "Displays information about the scripts.",
+        "prettier": "Check code style",
+        "solhint": "Run solidity linter",
         "test": "Run unit tests"
     },
     "dependencies": {
-        "@openzeppelin/contracts": "3.2.1-solc-0.7"
+        "@openzeppelin/contracts": "4.1.0"
     },
     "devDependencies": {
-        "hardhat": "^2.0.4",
-        "hardhat-deploy": "0.7.0-beta.46",
-        "hardhat-typechain": "^0.3.3",
-        "hardhat-deploy-ethers": "0.3.0-beta.7",
-        "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
-        "@nomiclabs/hardhat-etherscan": "^2.0.1",
+        "@nomiclabs/hardhat-ethers": "^2.0.2",
+        "@nomiclabs/hardhat-etherscan": "^2.1.2",
         "@nomiclabs/hardhat-waffle": "^2.0.1",
-        "@typechain/ethers-v5": "^6.0.0",
-        "@types/chai": "^4.2.14",
+        "@typechain/ethers-v5": "^6.0.5",
+        "@types/chai": "^4.2.18",
         "@types/mocha": "^8.0.4",
-        "@types/node": "^14.14.10",
+        "@types/node": "^15.0.2",
         "chai": "^4.2.0",
         "copyfiles": "^2.4.1",
         "ethereum-waffle": "^3.2.1",
-        "ethers": "^5.0.23",
+        "ethers": "^5.1.4",
+        "hardhat": "^2.2.1",
+        "hardhat-deploy": "0.7.5",
+        "hardhat-typechain": "^0.3.3",
         "npm-run-all": "^4.1.5",
         "npm-scripts-info": "^0.3.9",
+        "prettier-plugin-solidity": "^1.0.0-beta.10",
         "rimraf": "^3.0.2",
+        "solhint": "^3.3.4",
+        "solhint-plugin-prettier": "^0.0.5",
         "ts-generator": "^0.1.1",
         "ts-node": "^9.0.0",
-        "typechain": "^4.0.0",
+        "typechain": "^4.0.3",
         "typescript": "^4.1.2"
     },
     "repository": {
