--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cartesi/util",
-    "version": "2.0.1",
+    "version": "3.0.0",
     "description": "Solidity Util Contracts",
     "scripts": {
         "build": "hardhat compile && tsc",
@@ -52,7 +52,8 @@
         "@nomiclabs/hardhat-ethers": "^2.0.2",
         "@nomiclabs/hardhat-etherscan": "^2.1.2",
         "@nomiclabs/hardhat-waffle": "^2.0.1",
-        "@typechain/ethers-v5": "^6.0.5",
+        "@typechain/ethers-v5": "^7.0.0",
+        "@typechain/hardhat": "^2.0.0",
         "@types/chai": "^4.2.18",
         "@types/mocha": "^8.0.4",
         "@types/node": "^15.0.2",
@@ -62,7 +63,6 @@
         "ethers": "^5.1.4",
         "hardhat": "^2.2.1",
         "hardhat-deploy": "0.7.5",
-        "hardhat-typechain": "^0.3.3",
         "npm-run-all": "^4.1.5",
         "npm-scripts-info": "^0.3.9",
         "prettier-plugin-solidity": "^1.0.0-beta.10",
@@ -71,7 +71,7 @@
         "solhint-plugin-prettier": "^0.0.5",
         "ts-generator": "^0.1.1",
         "ts-node": "^9.0.0",
-        "typechain": "^4.0.3",
+        "typechain": "^5.0.0",
         "typescript": "^4.1.2"
     },
     "repository": {
