--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "hardhat-deploy": "0.7.5",
         "npm-run-all": "^4.1.5",
         "npm-scripts-info": "^0.3.9",
+        "prettier": "^2.3.0",
         "prettier-plugin-solidity": "^1.0.0-beta.10",
         "rimraf": "^3.0.2",
         "solhint": "^3.3.4",
