Additional deployment information

--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
         "copy-dts": "Copy TypeChain type definition files to typescript output dir",
         "clean": "Clean build artifacts, including contracts local deployment information",
         "deploy": "Deploy contracts to local node. Requires node running on localhost:8545",
-        "deploy:bsc_testnet": "Deploy contracts to bsc_testnet.",
+        "deploy:bsc_testnet": "Deploy contracts to bsc_testnet. Requires one environment variable: MNEMONIC.",
         "deploy:development": "Deploy contracts to local node. Requires node running on localhost:8545",
         "deploy:goerli": "Deploy contracts to goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:kovan": "Deploy contracts to kovan. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:mainnet": "Deploy contracts to mainnet.",
         "deploy:matic_testnet": "Deploy contracts to matic_testnet. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-        "deploy:avax_testnet": "Deploy contracts to avax_testnet.",
+        "deploy:avax_testnet": "Deploy contracts to avax_testnet. Requires one environment variable: MNEMONIC.",
         "deploy:rinkeby": "Deploy contracts to rinkeby. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:ropsten": "Deploy contracts to ropsten. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
