--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cartesi/util",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Solidity Util Contracts",
   "scripts": {
     "build": "hardhat compile && tsc",
@@ -14,7 +14,8 @@
     "deploy:mainnet": "hardhat deploy --network mainnet --export export/abi/mainnet.json",
     "deploy:matic_testnet": "hardhat deploy --network matic_testnet --export export/abi/matic_testnet.json",
     "deploy:rinkeby": "hardhat deploy --network rinkeby --export export/abi/rinkeby.json",
-    "deploy:testnet": "run-s deploy:rinkeby deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet",
+    "deploy:ropsten": "hardhat deploy --network ropsten --export export/abi/ropsten.json",
+    "deploy:testnet": "run-s deploy:rinkeby deploy:ropsten deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet",
     "export": "hardhat export-artifacts export/artifacts",
     "info": "npm-scripts-info",
     "prepack": "run-s clean prepare",
@@ -34,6 +35,7 @@
     "deploy:mainnet": "Deploy contracts to mainnet.",
     "deploy:matic_testnet": "Deploy contracts to matic_testnet.",
     "deploy:rinkeby": "Deploy contracts to rinkeby. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+    "deploy:ropsten": "Deploy contracts to ropsten. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
     "export": "Export artifacts in a simpler format",
     "info": "Displays information about the scripts.",
