--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -15,6 +15,7 @@ ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }
 ethabi = { version = "14.0.0", default-features = false }
 futures = "0.3"
 im = "15.0"
+serde = "1.0"
 serde_json = "1.0"
 snafu = "0.6"
 tokio = { version = "^1", features = ["sync", "rt-multi-thread", "macros"] }
