--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "deploy:testnet": "run-s deploy:rinkeby deploy:ropsten deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet deploy:avax_testnet",
         "export": "hardhat export-artifacts export/artifacts",
         "info": "npm-scripts-info",
+        "prebuild": "grpc_tools_node_protoc --plugin=protoc-gen-ts=node_modules/.bin/protoc-gen-ts --ts_out=grpc_js:src/proto --js_out=import_style=commonjs,binary:src/proto --grpc_out=grpc_js:src/proto -I grpc-interfaces grpc-interfaces/stateserver.proto",
         "prepack": "run-s clean prepare",
         "prepare": "run-s build copy-dts export",
         "prettier": "prettier --check src/**/*.ts test/**/*.ts contracts/**/*.sol",
@@ -50,12 +51,14 @@
         "test:coverage": "Run test coverage report"
     },
     "devDependencies": {
+        "@grpc/grpc-js": "^1.3.7",
         "@nomiclabs/hardhat-ethers": "^2.0.2",
         "@nomiclabs/hardhat-etherscan": "^2.1.6",
         "@nomiclabs/hardhat-waffle": "^2.0.1",
         "@typechain/ethers-v5": "^7.0.1",
         "@typechain/hardhat": "^2.3.0",
         "@types/chai": "^4.2.21",
+        "@types/google-protobuf": "^3.15.5",
         "@types/keccak": "^3.0.1",
         "@types/mocha": "^9.0.0",
         "@types/node": "^16.7.10",
@@ -63,6 +66,8 @@
         "copyfiles": "^2.4.1",
         "ethereum-waffle": "^3.4.0",
         "ethers": "^5.4.6",
+        "grpc-tools": "^1.11.2",
+        "grpc_tools_node_protoc_ts": "^5.3.2",
         "hardhat": "^2.6.2",
         "hardhat-deploy": "0.9.0",
         "npm-run-all": "^4.1.5",
