--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -5,12 +5,19 @@ authors = ["Cartesi Team"]
 homepage = "https://cartesi.io"
 edition = "2018"
 
+# main worker server binary
+[[bin]]
+name = "worker_server_main"
+path = "src/worker_server_main.rs"
+
 [dependencies]
-async-trait = "0.1"
 block-subscriber = { git = "https://github.com/cartesi/offchain-utils", rev = "bcab565" }
 offchain-core = { git = "https://github.com/cartesi/offchain-utils", rev = "bcab565" }
 state-fold = { git = "https://github.com/cartesi/state-fold", rev = "ace5480" }
+state-server-grpc = { path = "../../state-fold/state-server-grpc" }
 tx-manager = { git = "https://github.com/cartesi/tx-manager", rev = "a6a2d1f" }
+
+async-trait = "0.1"
 ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }
 ethabi = { version = "14.0.0", default-features = false }
 futures = "0.3"
@@ -19,7 +26,11 @@ serde = "1.0"
 serde_json = "1.0"
 snafu = "0.6"
 tokio = { version = "^1", features = ["sync", "rt-multi-thread", "macros"] }
+tonic = "0.4"
 
 [build-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }
 serde_json = "1.0"
+
+[patch."https://github.com/cartesi/state-fold"]
+state-fold = { path = "../../state-fold/state-fold" }
