--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "prettier": "prettier --check src/**/*.ts test/**/*.ts contracts/**/*.sol",
         "solhint": "solhint contracts/**/*.sol",
         "start": "hardhat node",
-        "test": "hardhat test"
+        "test": "hardhat test",
+        "test:coverage": "hardhat coverage"
     },
     "scripts-info": {
         "build": "Build contracts and typescript code",
@@ -45,9 +46,9 @@
         "info": "Displays information about the scripts.",
         "prettier": "Check code style",
         "solhint": "Run solidity linter",
-        "test": "Run unit tests"
+        "test": "Run unit tests",
+        "test:coverage": "Run test coverage report"
     },
-    "dependencies": {},
     "devDependencies": {
         "@nomiclabs/hardhat-ethers": "^2.0.2",
         "@nomiclabs/hardhat-etherscan": "^2.1.6",
@@ -71,6 +72,7 @@
         "rimraf": "^3.0.2",
         "solhint": "^3.3.6",
         "solhint-plugin-prettier": "^0.0.5",
+        "solidity-coverage": "^0.7.17",
         "ts-generator": "^0.1.1",
         "ts-node": "^10.2.1",
         "typechain": "^5.1.2",
