--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -11,11 +11,11 @@ name = "worker_server_main"
 path = "src/worker_server_main.rs"
 
 [dependencies]
-block-subscriber = { git = "https://github.com/cartesi/offchain-utils", rev = "38342b0" }
-offchain-core = { git = "https://github.com/cartesi/offchain-utils", rev = "38342b0" }
-state-fold = { git = "https://github.com/cartesi/state-fold", rev = "64f9c0e" }
-state-server-grpc = { git = "https://github.com/cartesi/state-fold", rev = "64f9c0e" }
-tx-manager = { git = "https://github.com/cartesi/tx-manager", rev = "29a1abf" }
+block-subscriber = { git = "https://github.com/cartesi/offchain-utils", rev = "c4a9c05" }
+offchain-core = { git = "https://github.com/cartesi/offchain-utils", rev = "c4a9c05" }
+state-fold = { git = "https://github.com/cartesi/state-fold", rev = "f5d4c72" }
+state-server-grpc = { git = "https://github.com/cartesi/state-fold", rev = "f5d4c72" }
+tx-manager = { git = "https://github.com/cartesi/tx-manager", rev = "a35a776" }
 
 async-trait = "0.1"
 ethers = { version = "0.5.3", features = [ "legacy", "ws" ] }
@@ -28,7 +28,7 @@ serde = "1.0"
 serde_json = "1.0"
 snafu = "0.6"
 tokio = { version = "^1", features = ["sync", "rt-multi-thread", "macros"] }
-tonic = "0.4"
+tonic = "^0.5.2"
 
 [build-dependencies]
 ethers = { version = "0.5.3", features = [ "legacy", "ws" ] }
