--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cartesi/util",
-    "version": "3.1.2",
+    "version": "4.0.0-alpha",
     "description": "Solidity Util Contracts",
     "scripts": {
         "build": "hardhat compile && tsc",
