--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,17 +2,18 @@ name: Build
 on: [push, pull_request]
 jobs:
     build:
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-22.04
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
               with:
                   submodules: recursive
                   token: ${{ secrets.CI_TOKEN }}
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v3
               with:
                   node-version: "16"
             - run: yarn install
             - run: yarn prettier
+            - run: yarn prepack
             - run: yarn test:coverage
             - name: Coveralls
               uses: coverallsapp/github-action@master
