--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "deploy:bsc_testnet": "hardhat deploy --network bsc_testnet --export export/abi/bsc_testnet.json",
         "deploy:development": "hardhat deploy --network localhost",
         "deploy:goerli": "hardhat deploy --network goerli --export export/abi/goerli.json",
+        "deploy:sepolia": "hardhat deploy --network sepolia --export export/abi/sepolia.json",
         "deploy:mainnet": "hardhat deploy --network mainnet --export export/abi/mainnet.json",
         "deploy:polygon_mumbai": "hardhat deploy --network polygon_mumbai --export export/abi/polygon_mumbai.json",
         "deploy:arbitrum_goerli": "hardhat deploy --network arbitrum_goerli --export export/abi/arbitrum_goerli.json",
@@ -22,7 +23,7 @@
         "deploy:avalanche_fuji": "hardhat deploy --network avalanche_fuji --export export/abi/avalanche_fuji.json",
         "deploy:iotex_testnet": "hardhat deploy --network iotex_testnet --export export/abi/iotex_testnet.json",
         "deploy:chiado": "hardhat deploy --network chiado --export export/abi/chiado.json",
-        "deploy:testnet": "run-s deploy:goerli deploy:polygon_mumbai deploy:arbitrum_goerli deploy:optimism_goerli deploy:bsc_testnet deploy:avalanche_fuji deploy:iotex_testnet deploy:chiado",
+        "deploy:testnet": "run-s deploy:goerli deploy:sepolia deploy:polygon_mumbai deploy:arbitrum_goerli deploy:optimism_goerli deploy:bsc_testnet deploy:avalanche_fuji deploy:iotex_testnet deploy:chiado",
         "export": "hardhat export-artifacts export/artifacts --hide-sources --including-empty-bytecode --including-no-public-functions",
         "info": "npm-scripts-info",
         "prebuild": "run-s codegen",
@@ -42,6 +43,7 @@
         "deploy:bsc_testnet": "Deploy contracts to bsc_testnet. Requires one environment variable: MNEMONIC.",
         "deploy:development": "Deploy contracts to local node. Requires node running on localhost:8545",
         "deploy:goerli": "Deploy contracts to goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+        "deploy:sepolia": "Deploy contracts to sepolia. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:mainnet": "Deploy contracts to mainnet.",
         "deploy:polygon_mumbai": "Deploy contracts to polygon_mumbai. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:arbitrum_goerli": "Deploy contracts to arbitrum_goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
