--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
         "deploy:mainnet": "hardhat deploy --network mainnet --export export/abi/mainnet.json",
         "deploy:matic_testnet": "hardhat deploy --network matic_testnet --export export/abi/matic_testnet.json",
         "deploy:avax_testnet": "hardhat deploy --network avax_testnet --export export/abi/avax_testnet.json",
-        "deploy:rinkeby": "hardhat deploy --network rinkeby --export export/abi/rinkeby.json",
-        "deploy:testnet": "run-s deploy:rinkeby deploy:goerli deploy:matic_testnet deploy:bsc_testnet deploy:avax_testnet",
+        "deploy:testnet": "run-s deploy:goerli deploy:matic_testnet deploy:bsc_testnet deploy:avax_testnet",
         "export": "hardhat export-artifacts export/artifacts --hide-sources --including-empty-bytecode --including-no-public-functions",
         "info": "npm-scripts-info",
         "prebuild": "run-s codegen",
@@ -42,7 +41,6 @@
         "deploy:mainnet": "Deploy contracts to mainnet.",
         "deploy:matic_testnet": "Deploy contracts to matic_testnet. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:avax_testnet": "Deploy contracts to avax_testnet. Requires one environment variable: MNEMONIC.",
-        "deploy:rinkeby": "Deploy contracts to rinkeby. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "export": "Export artifacts in a simpler format",
         "info": "Displays information about the scripts.",
