--- a/packages/contracts/.gitignore
+++ b/packages/contracts/.gitignore
@@ -14,3 +14,17 @@ test/*/
 .node*
 *.bin
 *.abi
+
+# Compiler files
+out/
+
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
+
+# Docs
+docs/
+
+# Dotenv file
+.env
