--- a/packages/contracts/.gitmodules
+++ b/packages/contracts/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "/lib/forge-std"]
-	path = /lib/forge-std
+[submodule "lib/forge-std"]
+	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
