--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     },
     "devDependencies": {
         "eslint-config-custom": "*",
-        "prettier": "latest",
-        "turbo": "latest"
+        "prettier": "^2",
+        "turbo": "^1"
     },
     "engines": {
         "node": ">=14.0.0"
