feat: add metis deployment

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -23,6 +23,8 @@
         "deploy:iotex": "hardhat deploy --network iotex --export export/abi/iotex.json",
         "deploy:iotex_testnet": "hardhat deploy --network iotex_testnet --export export/abi/iotex_testnet.json",
         "deploy:mainnet": "hardhat deploy --network mainnet --export export/abi/mainnet.json",
+        "deploy:metis": "hardhat deploy --network metis --export export/abi/metis.json",
+        "deploy:metis_goerli": "hardhat deploy --network metis_goerli --export export/abi/metis_goerli.json",
         "deploy:optimism": "hardhat deploy --network optimism --export export/abi/optimism.json",
         "deploy:optimism_goerli": "hardhat deploy --network optimism_goerli --export export/abi/optimism_goerli.json",
         "deploy:polygon": "hardhat deploy --network polygon --export export/abi/polygon.json",
@@ -57,6 +59,8 @@
         "deploy:iotex": "Deploy contracts to iotex. Requires environment variable MNEMONIC.",
         "deploy:iotex_testnet": "Deploy contracts to iotex_testnet. Requires environment variable MNEMONIC.",
         "deploy:mainnet": "Deploy contracts to mainnet. Requires environment variable MNEMONIC.",
+        "deploy:metis": "Deploy contracts to metis. Requires environment variable MNEMONIC.",
+        "deploy:metis_goerli": "Deploy contracts to metis_goerli. Requires environment variable MNEMONIC.",
         "deploy:optimism": "Deploy contracts to optimism. Requires environment variable MNEMONIC.",
         "deploy:optimism_goerli": "Deploy contracts to optimism_goerli. Requires environment variable MNEMONIC.",
         "deploy:polygon": "Deploy contracts to polygon. Requires environment variable MNEMONIC.",
