feat: add celo and fantom

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -16,8 +16,12 @@
         "deploy:avalanche_fuji": "hardhat deploy --network avalanche_fuji --export export/abi/avalanche_fuji.json",
         "deploy:bsc": "hardhat deploy --network bsc --export export/abi/bsc.json",
         "deploy:bsc_testnet": "hardhat deploy --network bsc_testnet --export export/abi/bsc_testnet.json",
+        "deploy:celo": "hardhat deploy --network celo --export export/abi/celo.json",
+        "deploy:celo_testnet": "hardhat deploy --network celo_testnet --export export/abi/celo_testnet.json",
         "deploy:chiado": "hardhat deploy --network chiado --export export/abi/chiado.json",
         "deploy:development": "hardhat deploy --network localhost",
+        "deploy:fantom": "hardhat deploy --network fantom --export export/abi/fantom.json",
+        "deploy:fantom_testnet": "hardhat deploy --network fantom_testnet --export export/abi/fantom_testnet.json",
         "deploy:gnosis": "hardhat deploy --network gnosis --export export/abi/gnosis.json",
         "deploy:goerli": "hardhat deploy --network goerli --export export/abi/goerli.json",
         "deploy:iotex": "hardhat deploy --network iotex --export export/abi/iotex.json",
