feat: deploy npm command

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -27,6 +27,7 @@
         "deploy:iotex": "hardhat deploy --network iotex --export export/abi/iotex.json",
         "deploy:iotex_testnet": "hardhat deploy --network iotex_testnet --export export/abi/iotex_testnet.json",
         "deploy:mainnet": "hardhat deploy --network mainnet --export export/abi/mainnet.json",
+        "deploy:mainnets": "run-s deploy:arbitrum deploy:avalanche deploy:bsc deploy:celo deploy:fantom deploy:gnosis deploy:iotex deploy:mainnet deploy:metis deploy:optimism deploy:polygon",
         "deploy:metis": "hardhat deploy --network metis --export export/abi/metis.json",
         "deploy:metis_goerli": "hardhat deploy --network metis_goerli --export export/abi/metis_goerli.json",
         "deploy:optimism": "hardhat deploy --network optimism --export export/abi/optimism.json",
@@ -34,7 +35,7 @@
         "deploy:polygon": "hardhat deploy --network polygon --export export/abi/polygon.json",
         "deploy:polygon_mumbai": "hardhat deploy --network polygon_mumbai --export export/abi/polygon_mumbai.json",
         "deploy:sepolia": "hardhat deploy --network sepolia --export export/abi/sepolia.json",
-        "deploy:testnet": "run-s deploy:goerli deploy:sepolia deploy:polygon_mumbai deploy:arbitrum_goerli deploy:optimism_goerli deploy:bsc_testnet deploy:avalanche_fuji deploy:iotex_testnet deploy:chiado",
+        "deploy:testnet": "run-s deploy:arbitrum_goerli deploy:avalanche_fuji deploy:bsc_testnet deploy:celo_testnet deploy:chiado deploy:fantom_testnet deploy:goerli deploy:iotex_testnet deploy:metis_goerli deploy:optimism_goerli deploy:polygon_mumbai deploy:sepolia",
         "export": "hardhat export-artifacts export/artifacts --hide-sources --including-empty-bytecode --including-no-public-functions",
         "info": "npm-scripts-info",
         "prepack": "run-s build tsc copy-dts",
@@ -63,6 +64,7 @@
         "deploy:iotex": "Deploy contracts to iotex. Requires environment variable MNEMONIC.",
         "deploy:iotex_testnet": "Deploy contracts to iotex_testnet. Requires environment variable MNEMONIC.",
         "deploy:mainnet": "Deploy contracts to mainnet. Requires environment variable MNEMONIC.",
+        "deploy:mainnets": "Deploy contracts to all supported mainnets. Requires environment variable MNEMONIC.",
         "deploy:metis": "Deploy contracts to metis. Requires environment variable MNEMONIC.",
         "deploy:metis_goerli": "Deploy contracts to metis_goerli. Requires environment variable MNEMONIC.",
         "deploy:optimism": "Deploy contracts to optimism. Requires environment variable MNEMONIC.",
