feat: bump versions and update changelog

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cartesi/util",
-    "version": "6.0.0-alpha.0",
+    "version": "6.0.0",
     "description": "Solidity Util Contracts",
     "scripts": {
         "build": "run-s compile export",
