--- a/packages/ethers-v5/package.json
+++ b/packages/ethers-v5/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cartesi/util-ethers-v5",
-    "version": "6.0.0-alpha.0",
+    "version": "6.0.0",
     "description": "Cartesi Solidity Util Typechain Ethers V5",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -13,7 +13,7 @@
         "prepack": "run-s build"
     },
     "dependencies": {
-        "@cartesi/util": "6.0.0-alpha.0",
+        "@cartesi/util": "6.0.0",
         "ethers": "^5"
     },
     "devDependencies": {
