feat: deploy to arbitrum_sepolia and optimism_sepolia

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cartesi/util",
-    "version": "6.0.0",
+    "version": "6.1.0",
     "description": "Solidity Util Contracts",
     "scripts": {
         "build": "run-s compile export",
@@ -12,6 +12,7 @@
         "deploy": "run-s deploy:development",
         "deploy:arbitrum": "hardhat deploy --network arbitrum --export export/abi/arbitrum.json",
         "deploy:arbitrum_goerli": "hardhat deploy --network arbitrum_goerli --export export/abi/arbitrum_goerli.json",
+        "deploy:arbitrum_sepolia": "hardhat deploy --network arbitrum_sepolia --export export/abi/arbitrum_sepolia.json",
         "deploy:avalanche": "hardhat deploy --network avalanche --export export/abi/avalanche.json",
         "deploy:avalanche_fuji": "hardhat deploy --network avalanche_fuji --export export/abi/avalanche_fuji.json",
         "deploy:bsc": "hardhat deploy --network bsc --export export/abi/bsc.json",
@@ -32,6 +33,7 @@
         "deploy:metis_goerli": "hardhat deploy --network metis_goerli --export export/abi/metis_goerli.json",
         "deploy:optimism": "hardhat deploy --network optimism --export export/abi/optimism.json",
         "deploy:optimism_goerli": "hardhat deploy --network optimism_goerli --export export/abi/optimism_goerli.json",
+        "deploy:optimism_sepolia": "hardhat deploy --network optimism_sepolia --export export/abi/optimism_sepolia.json",
         "deploy:polygon": "hardhat deploy --network polygon --export export/abi/polygon.json",
         "deploy:polygon_mumbai": "hardhat deploy --network polygon_mumbai --export export/abi/polygon_mumbai.json",
         "deploy:sepolia": "hardhat deploy --network sepolia --export export/abi/sepolia.json",
@@ -53,6 +55,7 @@
         "deploy": "Deploy contracts to local node. Requires node running on localhost:8545",
         "deploy:arbitrum": "Deploy contracts to arbitrum. Requires environment variable MNEMONIC.",
         "deploy:arbitrum_goerli": "Deploy contracts to arbitrum_goerli. Requires environment variable MNEMONIC.",
+        "deploy:arbitrum_sepolia": "Deploy contracts to arbitrum_sepolia. Requires environment variable MNEMONIC.",
         "deploy:avalanche": "Deploy contracts to avalanche. Requires environment variable MNEMONIC.",
         "deploy:avalanche_fuji": "Deploy contracts to avalanche_fuji. Requires environment variable MNEMONIC.",
         "deploy:bsc": "Deploy contracts to bsc. Requires environment variable MNEMONIC.",
@@ -69,6 +72,7 @@
         "deploy:metis_goerli": "Deploy contracts to metis_goerli. Requires environment variable MNEMONIC.",
         "deploy:optimism": "Deploy contracts to optimism. Requires environment variable MNEMONIC.",
         "deploy:optimism_goerli": "Deploy contracts to optimism_goerli. Requires environment variable MNEMONIC.",
+        "deploy:optimism_sepolia": "Deploy contracts to optimism_sepolia. Requires environment variable MNEMONIC.",
         "deploy:polygon": "Deploy contracts to polygon. Requires environment variable MNEMONIC.",
         "deploy:polygon_mumbai": "Deploy contracts to polygon_mumbai. Requires environment variable MNEMONIC.",
         "deploy:sepolia": "Deploy contracts to sepolia. Requires environment variable MNEMONIC.",
@@ -84,15 +88,14 @@
     "devDependencies": {
         "@nomicfoundation/hardhat-chai-matchers": "^2",
         "@nomicfoundation/hardhat-ethers": "^3",
-        "@nomicfoundation/hardhat-verify": "^1",
+        "@nomicfoundation/hardhat-verify": "^2",
         "@safe-global/safe-singleton-factory": "^1",
-        "@typechain/ethers-v6": "^0.4",
-        "@typechain/hardhat": "^8",
+        "@typechain/ethers-v6": "^0.5",
+        "@typechain/hardhat": "^9",
         "@types/chai": "^4",
         "@types/keccak": "^3",
         "@types/mocha": "^10",
         "@types/node": "^20",
-        "@wagmi/chains": "^1",
         "chai": "^4",
         "copyfiles": "^2",
         "decimal.js": "^10",
@@ -105,13 +108,14 @@
         "prettier": "^3",
         "prettier-plugin-solidity": "^1",
         "rimraf": "^5",
-        "solhint": "^3",
-        "solhint-plugin-prettier": "^0.0.5",
+        "solhint": "^4",
+        "solhint-plugin-prettier": "^0.1.0",
         "solidity-coverage": "^0.8",
         "ts-generator": "^0.1",
         "ts-node": "^10",
         "typechain": "^8",
-        "typescript": "^5"
+        "typescript": "^5",
+        "viem": "^1"
     },
     "repository": {
         "type": "git",
